carousel js for announcements section - still a lot of TODOs!

--- a/_includes/elements/news.html
+++ b/_includes/elements/news.html
@@ -2,57 +2,57 @@
     <!-- remove class no-dates to see dates -->
     <ul class="no-dates">
         <li>
-            <a href="#" title="Olympics live coverage available to most Soldiers worldwide">
+            <a href="https://www.army.mil/article/173720/president_proclaims_national_employer_support_of_the_guard_and_reserve_week" title="President proclaims 'National Employer Support of the Guard and Reserve Week'">
                 <span class="image">
-                    <img srcset="https://www.army.mil/e2/c/images/2016/08/04/445752/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/04/445752/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/04/445752/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/04/445752/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/04/445752/size1.jpg" alt="Olympics live coverage available to most Soldiers worldwide">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/22/447747/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/22/447747/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/22/447747/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/22/447747/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/22/447747/size1.jpg" alt="President proclaims 'National Employer Support of the Guard and Reserve Week'">
                 </span>
-                <span class="title">Olympics live coverage available to most Soldiers worldwide</span>
-                <span class="date">August 5, 2016</span>
+                <span class="title">President proclaims 'National Employer Support of the Guard and Reserve Week'</span>
+                <span class="date">August 22, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="Gen. Joseph Lengyel becomes 28th chief of National Guard Bureau">
+            <a href="https://www.army.mil/article/173660/army_chief_of_staff_visits_combined_forces_on_korean_peninsula" title="Army Chief of Staff visits combined forces on Korean peninsula">
                 <span class="image">
-                    <img srcset="https://www.army.mil/e2/c/images/2016/08/04/445649/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/04/445649/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/04/445649/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/04/445649/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/04/445649/size2.jpg" alt="Gen. Joseph Lengyel becomes 28th chief of National Guard Bureau">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/19/447604/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/19/447604/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/19/447604/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/19/447604/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/19/447604/size2.jpg" alt="Army Chief of Staff visits combined forces on Korean peninsula">
                 </span>
-                <span class="title">Gen. Joseph Lengyel becomes 28th chief of National Guard Bureau</span>
-                <span class="date">August 4, 2016</span>
+                <span class="title">Army Chief of Staff visits combined forces on Korean peninsula</span>
+                <span class="date">August 19, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="'Road to Rio' includes stops at Fort Leonard Wood">
+            <a href="https://www.army.mil/article/173576/south_dakota_couple_graduate_basic_training_together" title="South Dakota couple graduate basic training together">
                 <span class="image">
-                    <img srcset="https://www.army.mil/e2/c/images/2016/08/03/445588/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/03/445588/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/03/445588/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/03/445588/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/03/445588/size2.jpg" alt="'Road to Rio' includes stops at Fort Leonard Wood">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/18/447447/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/18/447447/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/18/447447/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/18/447447/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/18/447447/size2.jpg" alt="South Dakota couple graduate basic training together">
                 </span>
-                <span class="title">'Road to Rio' includes stops at Fort Leonard Wood</span>
-                <span class="date">August 3, 2016</span>
+                <span class="title">South Dakota couple graduate basic training together</span>
+                <span class="date">August 19, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="Scientists showcase advanced Army tech for DOD deputy secretary">
+            <a href="https://www.army.mil/article/173589/national_guard_rescues_19000_in_flood_affected_areas" title="National Guard rescues 19,000 in flood-affected areas">
                 <span class="image">
-                    <img srcset="https://www.army.mil/e2/c/images/2016/08/03/445616/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/03/445616/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/03/445616/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/03/445616/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/03/445616/size2.jpg" alt="Scientists showcase advanced Army tech for DOD deputy secretary">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/19/447591/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/19/447591/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/19/447591/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/19/447591/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/19/447591/size2.jpg" alt="National Guard rescues 19,000 in flood-affected areas">
                 </span>
-                <span class="title">Scientists showcase advanced Army tech for DOD deputy secretary</span>
-                <span class="date">August 3, 2016</span>
+                <span class="title">National Guard rescues 19,000 in flood-affected areas</span>
+                <span class="date">August 18, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="Civil support team catches a different kind of ride to work">
+            <a href="https://www.army.mil/article/173559/vp_biden_hitches_ride_on_chinook_to_sons_dedication" title="VP Biden hitches ride on Chinook to son's dedication">
                 <span class="image">
-                    <img srcset="https://www.army.mil/e2/c/images/2016/08/02/445418/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/02/445418/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/02/445418/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/02/445418/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/02/445418/size2.jpg" alt="Civil support team catches a different kind of ride to work">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/18/447410/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/18/447410/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/18/447410/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/18/447410/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/18/447410/size2.jpg" alt="VP Biden hitches ride on Chinook to son's dedication">
                 </span>
-                <span class="title">Civil support team catches a different kind of ride to work</span>
-                <span class="date">August 2, 2016</span>
+                <span class="title">VP Biden hitches ride on Chinook to son's dedication</span>
+                <span class="date">August 18, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="National Guard brigade undertakes unprecedented logistics effort for Saber Guardian">
+            <a href="https://www.army.mil/article/173544/army_reserve_officer_takes_olympic_bronze_in_pole_vault" title="Army Reserve officer takes Olympic bronze in pole vault">
                 <span class="image">
-                    <img srcset="https://www.army.mil/e2/c/images/2016/08/02/445429/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/02/445429/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/02/445429/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/02/445429/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/02/445429/size2.jpg" alt="National Guard brigade undertakes unprecedented logistics effort for Saber Guardian">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/17/447384/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/17/447384/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/17/447384/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/17/447384/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/17/447384/size2.jpg" alt="Army Reserve officer takes Olympic bronze in pole vault">
                 </span>
-                <span class="title">National Guard brigade undertakes unprecedented logistics effort for Saber Guardian</span>
-                <span class="date">August 2, 2016</span>
+                <span class="title">Army Reserve officer takes Olympic bronze in pole vault</span>
+                <span class="date">August 18, 2016</span>
             </a>
         </li>
     </ul>
