--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -54,8 +54,8 @@
                 {% include elements/news.html %}
             </div>
         </div>
-        {% include elements/more-news.html %}
     </div>
+    {% include elements/announcements.html %}
     <div class="container no-bottom">
         <div class="inner-container">
             <div class="elem">
