--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -662,5 +662,28 @@
   &.active { background-position: -181px -49px; }
 }
 
+.directional-arrow {
+  background-image: $social-button-sprite;
+  display: block;
+  height: 12px;
+  width: 9px;
+
+  &.black-left {
+    background-position: -259px -60px;
+  }
+
+  &.black-right {
+    background-position: -268px -60px;
+  }
+
+  &.gray-left {
+    background-position: -259px -47px;
+  }
+
+  &.gray-right {
+    background-position: -268px -47px;
+  }
+}
+
 
 
