send the user to an more announcements

--- a/_includes/elements/announcements.html
+++ b/_includes/elements/announcements.html
@@ -93,6 +93,13 @@
                             <span class="date">February 5, 2016</span>
                         </a>
                     </li>
+                    <li class="carousel-items">
+                        <p class="more">
+                            <a class="disabled" href="">MORE ANNOUCEMENTS
+                                <span class="view-more-arrow-sm"></span>
+                            </a>
+                        </p>
+                    </li>
                 </ul>
             </div>
         </div>
