spell ANNOUNCEMENTS correctly

--- a/_includes/elements/announcements.html
+++ b/_includes/elements/announcements.html
@@ -95,7 +95,7 @@
                     </li>
                     <li class="carousel-items">
                         <p class="more">
-                            <a class="disabled" href="">MORE ANNOUCEMENTS
+                            <a class="disabled" href="">MORE ANNOUNCEMENTS
                                 <span class="view-more-arrow-sm"></span>
                             </a>
                         </p>
