update banner examples

--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -13,7 +13,22 @@
     </div>
 </div>
 
-<div class="page-banner2 page-banner leader-banner image-gradient parallax-image image-to-top">
+<div class="page-banner2 page-banner standard parallax-image">
+    <div class="full-width-image">
+        <div class="overlay-effect"></div>
+        <img src="https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600_v2.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/army_worldwide/2500_v2.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/1600_v2.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/army_worldwide/768_v2.jpg 768w">
+    </div>
+    <div class="container">
+        <div class="inner-container">
+            <div class="left-container">
+                <h1>Army Worldwide</h1>
+                <h2>Globally Responsive, <br>Regionally Engaged</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="page-banner3 page-banner leader-banner image-gradient parallax-image image-to-top">
     <div class="full-width-image">
         <img src="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg"
              srcset="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/2500.jpg 2500w,
@@ -59,7 +74,7 @@
     </div>
 </div>
 
-<div class="page-banner3 page-banner org-banner">
+<div class="page-banner4 page-banner org-banner">
     <div class="container">
         <div class="inner-container">
             <div class="logo">
@@ -98,7 +113,7 @@
     </div>
 </div>
 
-<div class="page-banner4 page-banner parallax-image standard">
+<div class="page-banner5 page-banner parallax-image standard">
     <div class="full-width-image">
         <div class="overlay-effect"></div>
         <img src="https://www.army.mil/e2/images/rv7/banners/valor/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/valor/2500.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/valor/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/valor/768.jpg 768w">
@@ -113,48 +128,17 @@
     </div>
 </div>
 
-<div class="page-banner5 page-banner parallax-image standard">
-    <div class="full-width-image">
-        <div class="overlay-effect"></div>
-        <img src="/e2/images/rv7/banners/2/1600.jpg" srcset="/e2/images/rv7/banners/2/2500.jpg 2500w, /e2/images/rv7/banners/2/1600.jpg 1600w, /e2/images/rv7/banners/2/768.jpg 768w, /e2/images/rv7/banners/2/480.jpg 480w">
-    </div>
-    <div class="container">
-        <div class="inner-container">
-            <div class="left-container">
-                <h1>Army 101</h1>
-                <h2>Explore Army Culture, <br>Professions and Programs</h2>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="page-banner6 page-banner parallax-image standard">
-    <div class="full-width-image">
-        <div class="overlay-effect"></div>
-        <img src="https://www.army.mil/e2/images/rv7/banners/army%20101/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/banners/army%20101/2500.jpg 2500w, https://www.army.mil/e2/images/rv7/banners/army%20101/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/banners/army%20101/768.jpg 768w">
-    </div>
-    <div class="container">
-        <div class="inner-container">
-            <div class="left-container">
-                <h1>Army 101</h1>
-                <h2>Explore Army Culture, <br>Professions and Programs</h2>
-            </div>
-        </div>
-    </div>
-</div>
-
 <nav>
     <input type="checkbox" id="subnav-toggle">
     <div class="subnav-container">
         <div class="subnav-inner">
             <label for="subnav-toggle">News Filters</label>
             <ul class="container">
-                <li><a class="active" data-id="page-banner1" href="">Standard</a></li>
-                <li><a href="#page-banner2">Leaders</a></li>
-                <li><a href="#page-banner3">Org Pages</a></li>
-                <li><a href="#page-banner4">Features</a></li>
-                <li><a href="#page-banner5">Features 2</a></li>
-                <li><a href="#page-banner6">Features 3</a></li>
+                <li><a class="active" data-id="page-banner1" href="">News</a></li>
+                <li><a data-id="page-banner2" href="">News 2</a></li>
+                <li><a href="#page-banner3">Leaders</a></li>
+                <li><a href="#page-banner4">Org Pages</a></li>
+                <li><a href="#page-banner5">Features</a></li>
             </ul>
         </div>
     </div>
