--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -295,6 +295,11 @@
     background: transparent $social-button-sprite no-repeat scroll -459px -216px;
     width: 25px;
   }
+  
+  &.rss-button span {
+    background: transparent $social-button-sprite no-repeat scroll -486px -216px;
+    width: 25px;
+  }
 
 }
 
@@ -396,7 +401,11 @@
     background: transparent $social-button-sprite no-repeat scroll -459px -166px;
     width: 25px;
   }
-
+  
+  &.rss-button span {
+    background: transparent $social-button-sprite no-repeat scroll -486px -166px;
+    width: 25px;
+  }
 }
 
 .social-button, .social-button-black {
@@ -471,6 +480,10 @@
   
   &.snapchat-button a:hover span {
     background-position: -459px -191px;
+  }
+  
+  &.rss-button a:hover span {
+    background-position: -486px -191px;
   }
 }
 
@@ -567,7 +580,6 @@
   &.vimeo-button a:hover span {
     background-position: -785px -132px;
   }
-
 }
 
 .social-button-sm {
@@ -605,6 +617,7 @@
     background: transparent $social-button-sprite no-repeat scroll -146px -50px;
     width: 23px;
   }
+  
 }
 
 .play-button {
