--- a/_scss/elements/_headlines.scss
+++ b/_scss/elements/_headlines.scss
@@ -16,6 +16,8 @@
       }
       
       a {
+        .view-more-arrow-sm { display: none; }
+        
         &:after {
           background: transparent $social-button-sprite no-repeat scroll -442px 0;
           content: "";
