announcements update - pan vs swipe

--- a/_scss/elements/_announcements.scss
+++ b/_scss/elements/_announcements.scss
@@ -67,15 +67,11 @@
     li {
       margin: 0;
       max-width: 255px;
-      
-      &.carousel-items:last-child {
-          padding-top: 63px;
-      }
-      
-      &.carousel-items a {
-          color: map-get($army-branding, grey70);
-      }
-      
+
+      &:last-child { padding-top: 63px; }
+
+      a { color: map-get($army-branding, grey70); }
+
       &:nth-child(3n+4) { clear: none; }
     }
   }
