--- a/_includes/elements/announcements.html
+++ b/_includes/elements/announcements.html
@@ -9,7 +9,7 @@
             </div>
             <div class="carousel">
                 <ul>
-                    <li class="carousel-items">
+                    <li>
                         <a href="https://www.army.mil/article/172903/department_of_the_army_announces_101st_airborne_division_deployment" title="Department of the Army announces 101st Airborne Division deployment">
                             <span class="image">
                                 <img srcset="https://www.army.mil/e2/c/images/2016/08/05/445921/size1.jpg 446w,
@@ -24,7 +24,7 @@
                             <span class="date">August 5, 2016</span>
                         </a>
                     </li>
-                    <li class="carousel-items">
+                    <li>
                         <a href="https://www.army.mil/article/172189/department_of_the_army_announces_1st_infantry_division_deployment" title="Department of the Army announces 1st Infantry Division deployment">
                             <span class="image">
                                 <img srcset="https://www.army.mil/e2/c/images/2016/07/28/444695/size1.jpg 446w,
@@ -39,7 +39,7 @@
                             <span class="date">July 26, 2016</span>
                         </a>
                     </li>
-                    <li class="carousel-items">
+                    <li>
                         <a href="https://www.army.mil/article/170960/army_researchers_testing_zika_vaccine" title="Army researchers testing Zika vaccine">
                             <span class="image">
                                 <img srcset="https://www.army.mil/e2/c/images/2016/07/05/441856/size1.jpg 446w,
@@ -54,7 +54,7 @@
                             <span class="date">July 6, 2016</span>
                         </a>
                     </li>
-                    <li class="carousel-items">
+                    <li>
                         <a href="https://www.army.mil/article/170627/sleeves_can_now_be_rolled_up" title="Sleeves can now be rolled up">
                             <span class="image">
                                 <img srcset="https://www.army.mil/e2/c/images/2016/06/29/441128/size1.jpg 446w,
@@ -69,7 +69,7 @@
                             <span class="date">June 30, 2016</span>
                         </a>
                     </li>
-                    <li class="carousel-items">
+                    <li>
                         <a href="https://www.army.mil/article/163980/army_outlines_gender_integration_implementation_plan" title="Army outlines gender integration implementation plan">
                             <span class="image">
                                 <img src="https://www.army.mil/e2/images/rv7/universal/army_seal.jpg" alt="" />
@@ -78,7 +78,7 @@
                             <span class="date">March 10, 2016</span>
                         </a>
                     </li>
-                    <li class="carousel-items">
+                    <li>
                         <a href="https://www.army.mil/article/161994/zika_virus_what_is_it_what_can_you_do" title="Zika Virus - What is it? What can you do?">
                             <span class="image">
                                 <img srcset="https://www.army.mil/e2/c/images/2016/02/18/423809/size1.jpg 446w,
@@ -93,12 +93,8 @@
                             <span class="date">February 5, 2016</span>
                         </a>
                     </li>
-                    <li class="carousel-items">
-                        <p class="more">
-                            <a class="disabled" href="">MORE ANNOUNCEMENTS
-                                <span class="view-more-arrow-sm"></span>
-                            </a>
-                        </p>
+                    <li>
+                        <a class="disabled" href="https://www.army.mil/news/newsreleases">MORE ANNOUNCEMENTS<span class="view-more-arrow-sm"></span></a>
                     </li>
                 </ul>
             </div>
