add velocity to swipe speed and center items when swiping through on small screens

--- a/_includes/elements/announcements.html
+++ b/_includes/elements/announcements.html
@@ -4,8 +4,8 @@
         <div class="inner-container">
             <h4>Official Army Announcements</h4>
             <div class="controls">
-                <a href="javascript:;" class="left disabled" title="Previous Announcements">Previous Announcements<span></span></a>
-                <a href="javascript:;" class="right" title="Next Announcements">Next Announcements<span></span></a>
+                <a href="javascript:;" class="left disabled" title="Previous">Previous<span></span></a>
+                <a href="javascript:;" class="right" title="Next">Next<span></span></a>
             </div>
             <div class="carousel">
                 <ul>
