alternate linkedin icon added

--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -9,6 +9,7 @@
   <div class="social-button youtube-button"><a href="#"><span></span></a></div>
   <div class="social-button instagram-button"><a href="#"><span></span></a></div>
   <div class="social-button vimeo-button"><a href="#"><span></span></a></div>
+  <div class="social-button linkedin-button"><a href="#"><span></span></a></div>
   <div class="social-button armylive-button"><a href="#"><span></span></a></div>
   <div class="social-button snapchat-button"><a href="#"><span></span></a></div>
   <!-- Regular Black Buttons -->
@@ -21,6 +22,7 @@
   <div class="social-button-black youtube-button"><a href="#"><span></span></a></div>
   <div class="social-button-black instagram-button"><a href="#"><span></span></a></div>
   <div class="social-button-black vimeo-button"><a href="#"><span></span></a></div>
+  <div class="social-button-black linkedin-button"><a href="#"><span></span></a></div>
   <div class="social-button-black armylive-button"><a href="#"><span></span></a></div>
   <div class="social-button-black snapchat-button"><a href="#"><span></span></a></div>
 </div>
