--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -34,6 +34,7 @@ $social-branding: (
     twitter: #55acee,
     google: #db4437,
     facebook: #3b5999,
+    linkedin: #0077b5,
     pinterest: #bd081c,
     email: #2f2f2f,
     print: #2f2f2f
