--- a/_scss/elements/_social.scss
+++ b/_scss/elements/_social.scss
@@ -39,7 +39,7 @@
   
   .hidden { display: none; }
   
-  .social-button-sm {
+  .social-button {
     float: left;
     width: 20%;
     a { padding: 15px; }
@@ -89,7 +89,6 @@
   .social-button-sm {
     float: left;
     margin: 0 10px 0 0;
-    width: auto;
     
     a {
       padding: 10px 0;
