--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -13,7 +13,7 @@ $army-branding: (
     gold: #fec325,
     white: #ffffff,
     darkcamo: #333c33,
-    mediumcamo: #83847a,
+    mediumcamo: #727365,
     lightcamo: #bfb8ab,
     grey90: #1a1a1a,
     grey80: #333333,
