buttons and swipe now detect when there arent enough items in the carousel

--- a/_includes/elements/announcements.html
+++ b/_includes/elements/announcements.html
@@ -4,7 +4,7 @@
         <div class="inner-container">
             <h4>Official Army Announcements</h4>
             <div class="controls">
-                <a href="javascript:;" class="left disabled" title="Previous">Previous<span></span></a>
+                <a href="javascript:;" class="left" title="Previous">Previous<span></span></a>
                 <a href="javascript:;" class="right" title="Next">Next<span></span></a>
             </div>
             <div class="carousel">
