fix date width for headlines for AP style dates

--- a/_includes/elements/headlines.html
+++ b/_includes/elements/headlines.html
@@ -9,7 +9,7 @@
             <a href="https://www.army.mil/article/155581" title="CSA's National Guard Association of the United States speech" target="_blank">CSA's National Guard Association of the United States speech</a>
         </li>
         <li>
-            <span class="date">AUG. 13, 2015</span>
+            <span class="date">MARCH 27, 2015</span>
             <a href="https://www.army.mil/article/154050" title="CSA's speech at change of responsibility ceremony" target="_blank">CSA's speech at change of responsibility ceremony</a>
         </li>
     </ul>
