email black and yellow icons added to sprite

--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -12,6 +12,7 @@
   <div class="social-button linkedin-button"><a href="#"><span></span></a></div>
   <div class="social-button armylive-button"><a href="#"><span></span></a></div>
   <div class="social-button snapchat-button"><a href="#"><span></span></a></div>
+  <div class="social-button email-button"><a href="#"><span></span></a></div>
   <!-- Regular Black Buttons -->
   <div class="social-button-black facebook-button"><a href="#"><span></span></a></div>
   <div class="social-button-black twitter-button"><a href="#"><span></span></a></div>
@@ -25,4 +26,5 @@
   <div class="social-button-black linkedin-button"><a href="#"><span></span></a></div>
   <div class="social-button-black armylive-button"><a href="#"><span></span></a></div>
   <div class="social-button-black snapchat-button"><a href="#"><span></span></a></div>
+  <div class="social-button-black email-button"><a href="#"><span></span></a></div>
 </div>
